--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,58 @@
+:root {
+	--primary: hsl(200deg 50% 30%);
+	--secondary: hsl(0deg 0% 30%);
+	--main-bgc: hsl(0deg 0% 98%);
+	--white: hsl(0deg 0% 99%);
+	--black: hsl(0deg 0% 2.5%);
+	--border-color: hsl(0deg 0% 50%);
+	--outline-color: hsl(0, 0%, 55%);
+
+	--small-shadow: hsl(0deg 0% 0% / 0.25);
+	--medium-shadow: hsl(0deg 0% 0% / 0.15);
+	--large-shadow: hsl(0deg 0% 0% / 0.1);
+}
+
 html {
 	font-size: 62.5%;
 }
 
 body {
+	font-family: 'Roboto', sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	font-variation-settings: 'wdth' 100;
 	font-size: 1.6rem;
+	color: black;
+	color: var(--black);
+}
+
+button,
+a {
+	outline: none;
+}
+
+a:focus-visible,
+button:focus-visible {
+	outline: 2px solid var(--outline-color);
+	outline-offset: 2px;
+}
+
+.app {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: var(--main-bgc);
+}
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	border: 0;
 }
