Fine tune landing page
1 - Embed brand in a tag;

2 - Embed footer content in p tag;

3 - Add yellow to color scheme;

4 - Change line height of h1 to 1.2;

5 - Change shadow of the button.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,7 @@
 :root {
 	--primary: hsl(200deg 50% 30%);
+	--primary: hsl(190, 100%, 23%);
+	--button: hsl(39, 100%, 47%);
 	--secondary: hsl(0deg 0% 30%);
 	--main-bgc: hsl(0deg 0% 98%);
 	--white: hsl(0deg 0% 99%);
