--- a/src/styles/landing-page.css
+++ b/src/styles/landing-page.css
@@ -27,7 +27,7 @@
 
 .header h1 {
 	font-size: 4.4rem;
-
+	line-height: 1.2;
 	font-family: 'Playfair Display', serif;
 	font-optical-sizing: auto;
 	font-weight: 700;
@@ -49,12 +49,15 @@
 
 	border: none;
 	background-color: var(--primary);
+	background-color: var(--button);
 	color: var(--white);
+	/* color: var(--black); */
+	text-shadow: 2px 2px 2px var(--medium-shadow);
 	font-size: 1.8rem;
 	font-weight: 500;
 	text-transform: uppercase;
 	cursor: pointer;
-	box-shadow: 4px 4px 8px var(--small-shadow);
+	box-shadow: 4px 4px 8px var(--medium-shadow);
 	transition: transform 200ms ease;
 }
 
