--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,13 +1,17 @@
 :root {
 	--primary: hsl(200deg 50% 30%);
 	--primary: hsl(190, 100%, 23%);
-	--button: hsl(39, 100%, 47%);
+	--yellow: hsl(39, 100%, 47%);
+	--green: hsl(100deg, 100%, 35%);
 	--secondary: hsl(0deg 0% 30%);
-	--main-bgc: hsl(0deg 0% 98%);
-	--white: hsl(0deg 0% 99%);
+	--main-bgc: hsl(0deg 0% 97%);
+	--white: hsl(0deg 0% 100%);
 	--black: hsl(0deg 0% 2.5%);
 	--border-color: hsl(0deg 0% 50%);
+	--border-color-light: hsl(216deg 10% 85%);
 	--outline-color: hsl(0, 0%, 55%);
+	--accent-color: hsl(215deg, 15%, 25%);
+	--accent-color: hsl(100deg, 100%, 35%);
 
 	--small-shadow: hsl(0deg 0% 0% / 0.25);
 	--medium-shadow: hsl(0deg 0% 0% / 0.15);
@@ -27,6 +31,12 @@ body {
 	font-size: 1.6rem;
 	color: black;
 	color: var(--black);
+}
+
+input,
+textarea,
+progress {
+	accent-color: var(--accent-color);
 }
 
 button,
