--- a/src/styles/landing-page.css
+++ b/src/styles/landing-page.css
@@ -4,69 +4,17 @@
 	min-height: 100%;
 	/* border: 1px solid #000; */
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
+	gap: 64px;
 
 	flex: 1;
 	position: relative;
 
 	padding: 20px;
-}
 
-.header {
-	max-width: 50%;
-	height: 400px;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: start;
-
-	/* background-color: green; */
-	z-index: 1;
-}
-
-.header h1 {
-	font-size: 4.4rem;
-	line-height: 1.2;
-	font-family: 'Playfair Display', serif;
-	font-optical-sizing: auto;
-	font-weight: 700;
-	font-style: normal;
-}
-
-.header p {
-	margin-top: 30px;
-	margin-bottom: 48px;
-	font-size: 2rem;
-	color: var(--secondary);
-}
-
-.header button {
-	min-width: 240px;
-	max-width: 50%;
-	padding: 12px 20px;
-	border-radius: 6px;
-
-	border: none;
-	background-color: var(--primary);
-	background-color: var(--button);
-	color: var(--white);
-	/* color: var(--black); */
-	text-shadow: 2px 2px 2px var(--medium-shadow);
-	font-size: 1.8rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	cursor: pointer;
-	box-shadow: 4px 4px 8px var(--medium-shadow);
-	transition: transform 200ms ease;
-}
-
-.header button:hover {
-	transform: translateY(-4px);
-}
-
-.header button:active {
-	transform: translateY(1px);
+	/* height: auto; */
 }
 
 .example {
@@ -78,7 +26,7 @@
 
 	z-index: 1;
 }
-
+/* 
 @media screen and (max-width: 672px) {
 	.header h1 {
 		font-size: 2.8rem;
@@ -117,4 +65,4 @@
 		width: 100%;
 		max-width: 300px;
 	}
-}
+} */
