--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,6 +46,7 @@ button:focus-visible,
 input:focus-visible,
 textarea:focus-visible,
 progress:focus-visible,
+select:focus-visible,
 .fileLabel:focus-visible {
 	outline: 2px solid var(--outline-color);
 	outline-offset: 2px;
@@ -56,6 +57,7 @@ a:focus:not(:focus-visible),
 button:focus:not(:focus-visible),
 input:focus:not(:focus-visible),
 textarea:focus:not(:focus-visible),
+select:focus:not(:focus-visible),
 progress:focus:not(:focus-visible) {
 	outline: none;
 }
