--- a/src/styles/data-display.css
+++ b/src/styles/data-display.css
@@ -1,9 +1,9 @@
-.dataDisplay {
+.data-display {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
 }
-.dataGroup {
+.data-group {
 	width: 100%;
 	display: flex;
 	align-items: start;
@@ -13,7 +13,7 @@
 	border-radius: 4px;
 }
 
-.dataDisplay .data {
+.data-display .data {
 	display: flex;
 	flex-direction: column;
 	gap: 4px;
@@ -21,11 +21,11 @@
 	color: var(--secondary);
 }
 
-.dataDisplay .data h3 {
+.data-display .data h3 {
 	color: var(--black);
 }
 
-.dataDisplay .button {
+.data-display .button {
 	display: flex;
 	align-items: center;
 	gap: 4px;
@@ -38,14 +38,14 @@
 	font-weight: 500;
 }
 
-.dataDisplay .icon {
+.data-display .icon {
 	width: 18px;
 	height: 18px;
 	display: flex;
 	align-items: center;
 }
 
-.dataDisplay .button.deleteButton {
+.data-display .button.delete-button {
 	font-weight: 400;
 	margin-top: 4px;
 }
