--- a/src/styles/cv-factory.css
+++ b/src/styles/cv-factory.css
@@ -18,16 +18,17 @@
 	gap: 20px;
 }
 
-.cv-preview {
+.cv-preview-btn {
 	width: 100%;
 	max-width: 450px;
-	padding: 16px 12px;
+	height: 56px;
+	line-height: 56px;
 	border-radius: 4px;
 	border: none;
 	background-color: var(--white);
 	border: 1px solid var(--green);
 	color: var(--green);
-	font-size: 1.8rem;
+	font-size: 1.6rem;
 	font-weight: 600;
 	text-transform: uppercase;
 	will-change: color, background-color;
@@ -36,8 +37,8 @@
 	cursor: pointer;
 }
 
-.cv-preview:hover,
-.cv-preview:active {
+.cv-preview-btn:hover,
+.cv-preview-btn:active {
 	color: var(--white);
 	background-color: var(--green);
 }
