--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -11,11 +11,12 @@
 	left: 0;
 	padding: 40px 20px 20px;
 	z-index: 2;
-	background-color: hsl(210deg 25% 15% / 0.75);
+	background-color: var(--resume-bg);
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 
 	/* For animation */
 	opacity: 0;
@@ -34,7 +35,7 @@
   */
 	width: 90vw;
 	height: auto;
-	max-width: 595px; /* about A4 width */
+	max-width: 595px;
 	max-height: 90vh;
 
 	/* A4 paper aspect ratio */
