feat: add media query to make resume preview   displayed on the left side when the app is used   on desktop

--- a/src/styles/data-display.css
+++ b/src/styles/data-display.css
@@ -49,3 +49,16 @@
 	font-weight: 400;
 	margin-top: 4px;
 }
+
+.item-title {
+	font-weight: 500;
+}
+
+.item-content {
+	display: flex;
+	flex-direction: column;
+}
+
+.item-content.skill {
+	display: inline-block;
+}
