--- a/src/styles/landing-page.css
+++ b/src/styles/landing-page.css
@@ -2,67 +2,36 @@
 	width: 100%;
 	max-width: 1024px;
 	min-height: 100%;
-	/* border: 1px solid #000; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	gap: 64px;
+	gap: 2em;
 
 	flex: 1;
 	position: relative;
 
-	padding: 20px;
-
-	/* height: auto; */
+	padding: 2em;
 }
 
 .example {
-	width: 300px;
+	flex: 1;
 	height: auto;
 	overflow: hidden;
-	border-radius: 8px;
 	box-shadow: 2px 2px 4px var(--medium-shadow);
 
 	z-index: 1;
 }
-/* 
-@media screen and (max-width: 672px) {
-	.header h1 {
-		font-size: 2.8rem;
-	}
 
-	.header p {
-		font-size: 1.6rem;
-	}
-
-	.header button {
-		max-width: 100%;
-		font-size: 1.6rem;
-	}
-}
-
-@media screen and (max-width: 896px) {
+@media screen and (min-width: 896px) {
 	.landing-page {
-		height: auto;
-		flex-direction: column;
-		align-items: center;
-		gap: 64px;
-	}
-
-	.header {
-		max-width: 75%;
-		height: auto;
-		align-items: center;
-		margin-top: 20px;
-	}
-
-	.header h1 {
-		text-align: center;
+		flex-direction: row;
+		gap: 6em;
+		padding: 0 3.5em;
 	}
 
 	.example {
-		width: 100%;
-		max-width: 300px;
+		flex: auto;
+		max-width: 260px;
 	}
-} */
+}
