--- a/src/styles/accordion.css
+++ b/src/styles/accordion.css
@@ -2,33 +2,33 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 1.5em;
 }
 
 /* Style the trigger */
 .accordion-trigger {
 	width: 100%;
-	border-radius: 4px;
+	border-radius: 0.25em;
 	border: 1px solid var(--border-color-light);
 	background: var(--white);
-	padding: 16px 12px;
+	padding: 0.8em;
 
 	display: flex;
 	align-items: center;
-	gap: 12px;
+	gap: 0.5em;
 
 	cursor: pointer;
 }
 
 .accordion-title {
 	text-transform: capitalize;
-	font-size: 1.8rem;
+	font-size: 1.6rem;
 	font-weight: 500;
 }
 
 .required-symbol {
 	color: var(--secondary);
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	font-style: italic;
 	align-self: last baseline;
 	margin-bottom: 1px;
@@ -40,7 +40,7 @@
 }
 
 .accordion-item.open .accordion-trigger {
-	border-radius: 4px 4px 0 0;
+	border-radius: 0.25em 0.25em 0 0;
 }
 
 .accordion-state-icon {
@@ -57,39 +57,46 @@
 .accordion-content {
 	overflow: hidden;
 	background-color: var(--white);
-	border-radius: 0 0 4px 4px;
+	border-radius: 0 0 0.25em 0.25em;
 	transform-origin: top;
 	max-height: 0;
+	margin-top: -0.25em;
+
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
 }
 
 .accordion-content.open {
 	overflow: visible;
 	max-height: 1000px;
-	padding: 20px;
+	padding: 1em;
 	border: 1px solid var(--border-color-light);
-	border-top: none;
+	/* border-top: none; */
 	animation: expand 250ms ease-in-out forwards;
 }
 
 .accordion-content .button.add-button {
-	display: block;
-	padding: 8px 12px;
-	max-width: 450px;
-	width: 100%;
-	background-color: transparent;
+	align-self: end;
+	width: 50%;
+	padding: 0.6em 1.2em;
+	border-radius: 0.4em;
+	background-color: var(--white);
 	border: 1px solid var(--green);
-	border-radius: 4px;
 	color: var(--green);
-	font-weight: 500;
-	cursor: pointer;
-	margin-top: 20px;
-
+	font-size: 1.4rem;
+	font-weight: 600;
+	text-transform: uppercase;
+	will-change: color, background-color;
 	transition: color 250ms ease, background-color 250ms ease;
+
+	cursor: pointer;
 }
 
-.accordion-content .button.add-button:hover {
-	background-color: var(--green);
+.accordion-content .button.add-button:hover,
+.accordion-content .button.add-button:active {
 	color: var(--white);
+	background-color: var(--green);
 }
 
 @keyframes expand {
