--- a/src/styles/cv-factory.css
+++ b/src/styles/cv-factory.css
@@ -1,34 +1,39 @@
 .factory {
 	width: 100%;
+	height: calc(100vh - 56px);
+	overflow: hidden;
 
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	/* gap: 40px; */
 
-	padding: 20px;
+	/* padding: 1.5em; */
 }
 
 .main {
-	width: 100%;
+	height: 100%;
+	overflow-y: scroll;
+	padding: 1.5em;
+	flex: 2;
 
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	gap: 20px;
+	gap: 2em;
 }
 
-.cv-preview-btn {
-	width: 100%;
-	max-width: 450px;
-	height: 56px;
-	line-height: 56px;
-	border-radius: 4px;
-	border: none;
+.factory .button-group {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1em;
+}
+
+.factory .btn {
+	width: 50%;
+	padding: 0.6em 1.2em;
+	border-radius: 0.4em;
 	background-color: var(--white);
 	border: 1px solid var(--green);
 	color: var(--green);
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	font-weight: 600;
 	text-transform: uppercase;
 	will-change: color, background-color;
@@ -37,8 +42,52 @@
 	cursor: pointer;
 }
 
-.cv-preview-btn:hover,
-.cv-preview-btn:active {
+.factory .btn:hover,
+.factory .btn:active {
 	color: var(--white);
 	background-color: var(--green);
+}
+
+.complete-btn {
+	display: none;
+}
+
+/* Style aside */
+.aside {
+	display: none;
+}
+
+.resume-wrapper {
+	height: 100%;
+	width: auto;
+	aspect-ratio: 210 / 297;
+	padding: 0.3em;
+}
+
+@media screen and (min-width: 896px) {
+	/* .factory .button-group {
+		justify-content: end;
+	} */
+	/* .factory .btn {
+		width: auto;
+	} */
+	.cv-preview-btn {
+		display: none;
+	}
+	.complete-btn {
+		display: block;
+	}
+
+	.aside {
+		flex: 3;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		height: calc(100vh - 56px);
+
+		color: var(--white);
+		background-color: var(--resume-bg);
+		font-size: 4rem;
+	}
 }
