--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,4 @@
 .header-title {
-	/* max-width: 50%; */
-	/* height: 400px; */
-
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
@@ -11,7 +8,6 @@
 	max-width: 100%;
 	height: auto;
 	align-items: center;
-	margin-top: 20px;
 }
 
 .header-title.center {
@@ -21,7 +17,7 @@
 }
 
 .header-title h1 {
-	font-size: 3rem;
+	font-size: 3.6rem;
 	line-height: 1.2;
 	font-family: 'Playfair Display', serif;
 	font-optical-sizing: auto;
@@ -32,8 +28,10 @@
 }
 
 .header-title p {
-	margin-top: 30px;
-	margin-bottom: 40px;
+	margin-top: 1em;
+
+	/* margin-top: 30px; */
+	/* margin-bottom: 40px; */
 	font-size: 1.6rem;
 	text-align: center;
 	width: 100%;
@@ -41,8 +39,10 @@
 }
 
 .header-title button {
-	padding: 12px 24px;
-	border-radius: 6px;
+	margin-top: 1.8em;
+	margin-bottom: 1.8em;
+	padding: 0.8em 1.6em;
+	border-radius: 0.5em;
 
 	border: none;
 	background-color: var(--primary);
@@ -63,4 +63,27 @@
 
 .header-title button:active {
 	transform: translateY(1px);
+}
+
+@media screen and (min-width: 896px) {
+	.landing-page .header-title {
+		flex: 2;
+		align-items: start;
+		gap: 1em;
+	}
+
+	.landing-page .header-title h1 {
+		text-align: start;
+		font-size: 4.4rem;
+	}
+
+	.landing-page .header-title p {
+		text-align: start;
+		font-size: 1.8rem;
+	}
+
+	.header-title.center p {
+		margin-top: 2em;
+		margin-bottom: 1em;
+	}
 }
