--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -4,15 +4,17 @@
 	display: flex;
 	align-items: center;
 	font-size: 0.75rem;
+	background-color: var(--white);
+	box-shadow: 4px 8px 16px var(--large-shadow);
 
 	.underline {
 		width: 100%;
-		height: 1px;
+		height: 0.1rem;
 	}
 }
 
 .resume h2 {
-	font-size: 1rem;
+	font-size: 1.15em;
 	font-weight: 450;
 	text-transform: uppercase;
 }
@@ -22,7 +24,7 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	padding: 0 10px;
+	padding: 0 1em;
 }
 
 /* Style left side */
@@ -33,11 +35,11 @@
 	font-weight: 350;
 
 	align-items: center;
-	gap: 10px;
+	gap: 1.6em;
 
 	.photo-wrapper {
-		margin: 24px 0 16px;
-		width: 85%;
+		margin: 3em 0 1.6em;
+		width: 80%;
 		height: auto;
 		aspect-ratio: 1 / 1;
 		border-radius: 50%;
@@ -48,7 +50,7 @@
 		background: var(--white);
 
 		.photo {
-			width: calc(100% - 5px);
+			width: calc(100% - 0.8em);
 			aspect-ratio: 1 / 1;
 			border-radius: 50%;
 			overflow: hidden;
@@ -59,7 +61,7 @@
 		width: 100%;
 
 		.info-title {
-			margin-bottom: 8px;
+			margin-bottom: 1em;
 
 			.underline {
 				background-color: var(--divider-light);
@@ -70,7 +72,7 @@
 			width: 100%;
 			display: flex;
 			flex-direction: column;
-			gap: 4px;
+			gap: 0.5em;
 
 			list-style: none;
 			padding: 0;
@@ -78,13 +80,13 @@
 			.info-row {
 				display: flex;
 				align-items: center;
-				gap: 6px;
+				gap: 0.5em;
 
 				/* border: 1px solid #000; */
 
 				.info-icon {
-					width: 9px;
-					height: 9px;
+					width: 1.15em;
+					height: 1.15em;
 
 					display: flex;
 					align-items: center;
@@ -100,10 +102,10 @@
 			.info-row-vertical {
 				display: flex;
 				flex-direction: column;
-				margin-bottom: 4px;
+				margin-bottom: 0.5em;
 
 				h3 {
-					font-size: 0.8rem;
+					font-size: 1em;
 					font-weight: 450;
 
 					span {
@@ -119,30 +121,30 @@
 			.info-row.skill {
 				justify-content: space-between;
 				div:first-of-type {
-					margin-left: -3px;
+					margin-left: -0.3em;
 					display: flex;
 					align-items: center;
 				}
 
 				progress {
 					width: 40%;
-					height: 1px;
+					height: 0.2rem;
 					appearance: none; /* Remove default styling */
 				}
 
 				progress::-webkit-progress-bar {
 					background-color: hsl(0deg 0% 100% / 0.1);
-					border-radius: 10px;
+					border-radius: 1em;
 				}
 
 				progress::-webkit-progress-value {
 					background-color: var(--divider-light); /* Progress color */
-					border-radius: 10px;
+					border-radius: 1em;
 				}
 
 				progress::-moz-progress-bar {
 					background-color: var(--white);
-					border-radius: 10px;
+					border-radius: 1em;
 				}
 			}
 		}
@@ -156,8 +158,8 @@
 	align-items: center;
 
 	.header {
-		margin-top: 24px;
-		margin-bottom: 24px;
+		margin-top: 5em;
+		margin-bottom: 2.5em;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -165,7 +167,7 @@
 		color: var(--resume-primary);
 
 		h1 {
-			font-size: 2.8rem;
+			font-size: 3em;
 			font-weight: 600;
 			text-transform: uppercase;
 
@@ -176,7 +178,7 @@
 
 		.position {
 			text-transform: uppercase;
-			font-size: 1.2rem;
+			font-size: 1.5em;
 			text-align: center;
 		}
 	}
@@ -184,12 +186,12 @@
 	.profile,
 	.experiences {
 		width: 100%;
-		margin-bottom: 16px;
+		margin-bottom: 2.5em;
 	}
 
 	.info-title {
 		color: var(--resume-primary);
-		margin-bottom: 8px;
+		margin-bottom: 1em;
 
 		.underline {
 			background-color: var(--divider-dark);
@@ -207,11 +209,11 @@
 		.info-content {
 			display: flex;
 			flex-direction: column;
-			gap: 16px;
+			gap: 2.5em;
 
 			.exp-wrapper {
 				display: flex;
-				gap: 10px;
+				gap: 1.25em;
 
 				/* decor */
 				.decor {
@@ -221,25 +223,25 @@
 
 					.circle {
 						display: block;
-						margin-top: 4px;
-						width: 4px;
-						height: 4px;
+						margin-top: 0.5em;
+						width: 0.75em;
+						height: 0.75em;
 						border-radius: 50%;
 						background-color: var(--resume-primary);
 					}
 
 					.rect {
-						margin-top: -4px;
-						margin-bottom: -24px;
+						/* margin-top: -0em; */
+						margin-bottom: -2.9em;
 						flex: 1;
-						width: 1px;
+						width: 0.1em;
 						background-color: var(--resume-primary);
 					}
 				}
 				.exp {
 					display: flex;
 					flex-direction: column;
-					gap: 4px;
+					gap: 0em;
 
 					.part-one {
 						display: flex;
@@ -260,9 +262,48 @@
 
 			.exp-wrapper:last-of-type {
 				.rect {
-					margin-bottom: 4px;
+					margin-bottom: 0.5em;
 				}
 			}
 		}
+	}
+}
+
+@media screen and (min-width: 384px) {
+	/* html {
+		font-size: 11px;
+	} */
+
+	.resume {
+		font-size: 0.82rem;
+	}
+}
+
+@media screen and (min-width: 448px) {
+	/* html {
+		font-size: 13px;
+	} */
+
+	.resume {
+		font-size: 0.95rem;
+	}
+}
+
+@media screen and (min-width: 512px) {
+}
+
+@media screen and (min-width: 576px) {
+	/* html {
+		font-size: 15px;
+	} */
+
+	.resume {
+		font-size: 1.2rem;
+	}
+}
+
+@media screen and (min-width: 896px) {
+	.resume {
+		font-size: 1.4rem;
 	}
 }
