--- a/src/styles/cv-factory.css
+++ b/src/styles/cv-factory.css
@@ -28,16 +28,10 @@
 
 .factory .btn {
 	width: 50%;
-	padding: 0.6em 1.2em;
-	border-radius: 0.4em;
 	background-color: var(--white);
 	border: 1px solid var(--green);
 	color: var(--green);
 	font-size: 1.4rem;
-	font-weight: 600;
-	text-transform: uppercase;
-	will-change: color, background-color;
-	transition: color 250ms ease, background-color 250ms ease;
 
 	cursor: pointer;
 }
@@ -48,7 +42,7 @@
 	background-color: var(--green);
 }
 
-.complete-btn {
+.complete--btn {
 	display: none;
 }
 
@@ -65,16 +59,10 @@
 }
 
 @media screen and (min-width: 896px) {
-	/* .factory .button-group {
-		justify-content: end;
-	} */
-	/* .factory .btn {
-		width: auto;
-	} */
-	.cv-preview-btn {
+	.preview--btn {
 		display: none;
 	}
-	.complete-btn {
+	.complete--btn {
 		display: block;
 	}
 
