--- a/src/styles/form-component.css
+++ b/src/styles/form-component.css
@@ -21,11 +21,202 @@ form {
 	gap: 20px;
 }
 
-/* @media screen and (min-width: 896px) {
-	.formRow:last-of-type {
-		justify-content: end;
-	}
-	.formRow:last-of-type button {
-		width: auto;
-	}
-} */
+/* Style input elements of type checkbox */
+.checkboxInputLabel {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+
+	padding: 12px 0;
+}
+
+.checkboxInputLabel {
+	line-height: 1.1;
+}
+
+input[type='checkbox'] {
+	appearance: none;
+	-webkit-appearance: none;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+
+	font: inherit;
+	color: currentColor;
+	width: 16px;
+	height: 16px;
+	border-radius: 2px;
+	border: 1px solid var(--border-color);
+	transform: translateY(-0.075em);
+
+	display: grid;
+	place-content: center;
+}
+
+input[type='checkbox']::before {
+	content: '';
+	width: 10px;
+	height: 10px;
+	transform: scale(0);
+	transition: transform 120ms ease;
+	background-color: var(--accent-color);
+
+	clip-path: polygon(11% 46%, 0 65%, 46% 100%, 100% 10%, 82% 0, 40% 69%);
+}
+
+input[type='checkbox']:checked::before {
+	transform: scale(1);
+}
+
+/* Date selector */
+.date-select-wrapper {
+	display: flex;
+	justify-content: space-between;
+	gap: 20px;
+}
+
+.select-wrapper {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
+}
+
+select,
+::picker(select) {
+	appearance: base-select;
+	/* font: -webkit-small-control; */
+}
+
+select {
+	padding: 8px 12px;
+	border-radius: 4px;
+	border: 1px solid var(--border-color-light);
+	text-align: center;
+}
+
+::picker(select) {
+	border: 1px solid var(--border-color-light);
+	border-top: 1px solid transparent;
+	margin-top: -4px;
+	padding: 0;
+	box-shadow: none;
+	background: var(--white);
+}
+
+option {
+	color: var(--secondary);
+	padding: 12px 24px 12px 40px;
+	text-align: center;
+	letter-spacing: 0.25px;
+}
+
+select::picker-icon {
+	transform: scaleY(0.65);
+	color: var(--secondary);
+}
+
+option:checked {
+	background: #d0edd0;
+	color: black;
+}
+
+/* File Input */
+.fileInput {
+	display: none;
+}
+
+.fileLabel {
+	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
+	gap: 12px;
+	padding: 8px 12px;
+	font-size: 14px;
+	font-weight: 500;
+	border: 1px solid hsl(216, 12%, 84%);
+	border-radius: 0.375rem;
+	background-color: white;
+	color: #111827;
+	transition: all 0.2s ease;
+}
+
+.fileButton {
+	font-size: 1.6rem;
+	font-weight: 500;
+}
+
+.fileButton:hover {
+	background-color: #f3f4f6;
+	border-color: #9ca3af;
+}
+
+.fileName {
+	font-size: 1.6rem;
+	font-weight: 400;
+	color: #374151;
+}
+
+/* Style input elements of type radio */
+.options-container {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	/* border: 1px solid #000; */
+	padding: 8px 12px;
+}
+
+.options-container .option {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+input[type='radio'] {
+	appearance: none;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+
+	font: inherit;
+	font-weight: inherit;
+	color: inherit;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	border: 1px solid var(--border-color);
+	cursor: pointer;
+
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+input[type='radio']::before {
+	position: absolute;
+	content: '';
+	width: 10px;
+	height: 10px;
+	top: 50%;
+	left: 50%;
+	border-radius: 50%;
+	transform: translate(-50%, -50%) scale(0);
+	background-color: var(--accent-color);
+	transform-origin: center;
+	transition: transform 120ms ease;
+	/* opacity: 0; */
+}
+
+input[type='radio']:checked::before {
+	transform: translate(-50%, -50%) scale(1);
+}
+
+/* Style range */
+.formRow .slider {
+	width: 100%;
+	height: 6px;
+
+	accent-color: var(--accent-color);
+	margin: 20px 0;
+}
